Code compiling and most tests running